samples/_failures_safe/1761181013_ed3268_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d08aae3a.c:175:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  175 | int main
      | ^~~
